--- a/portfo/zpj.html
+++ b/portfo/zpj.html
@@ -354,7 +354,7 @@
                   <div class="card video-card">
                     <br><h5 class="card-title">泡泡玛特x大广赛/《给年轻，上点色！》</h5><br>
                     <div class="embed-responsive embed-responsive-16by9">
-                      <iframe class="embed-responsive-item" src="zp\video\daguangsai.mp4" style="height: 540px;width: 960px;" allowfullscreen></iframe>
+                      <iframe class="embed-responsive-item" src="zp\video\daguangsai.mp4" allowfullscreen></iframe>
                     </div>
                     <div class="card-body">
                       <b><p class="card-text">第十五届全国大学生广告艺术大赛全国赛区二等奖</p></b><br>
@@ -368,7 +368,7 @@
                     <div class="card video-card">
                         <br><h5 class="card-title">景田x学院奖/《你，是不是渴了？》</h5><br>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="zp\video\你，是不是渴了.MP4" style="height: 540px;width: 960px;" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" src="zp\video\你，是不是渴了.MP4" allowfullscreen></iframe>
                         </div>
                         <div class="card-body">
                         <b><p class="card-text"></p></b><br>
