--- a/portfo/zpj.html
+++ b/portfo/zpj.html
@@ -347,39 +347,40 @@
     <br><hr class="outer"><br>
 
     <div class="section3" id="section3">
-        <div class="container">
-            <h2><b>视频作品展示</b></h2>
-            <div class="row justify-content-center" id="daguangsai">
-                <div class="col-md-12 mb-4">
+      <div class="container">
+          <h2><b>视频作品展示</b></h2>
+          <div class="row justify-content-center" id="daguangsai">
+              <div class="col-md-12 mb-4">
                   <div class="card video-card">
-                    <br><h5 class="card-title">泡泡玛特x大广赛/《给年轻，上点色！》</h5><br>
-                    <div class="embed-responsive embed-responsive-16by9">
-                      <iframe class="embed-responsive-item" src="zp\video\daguangsai.mp4" style="height: 540px;width: 960px;" allowfullscreen></iframe>
-                    </div>
-                    <div class="card-body">
-                      <b><p class="card-text">第十五届全国大学生广告艺术大赛全国赛区二等奖</p></b><br>
-                      <button class="btn btn-primary" onclick="like(this)"><i class="far fa-thumbs-up"></i> 点赞 <span class="badge bg-secondary" id="likeCount">0</span></button>
+                      <br><h5 class="card-title">泡泡玛特x大广赛/《给年轻，上点色！》</h5><br>
+                      <div class="embed-responsive embed-responsive-16by9" style="max-width: 100%;">
+                          <iframe class="embed-responsive-item" src="zp\video\daguangsai.mp4" allowfullscreen></iframe>
+                      </div>
+                      <div class="card-body">
+                          <b><p class="card-text">第十五届全国大学生广告艺术大赛全国赛区二等奖</p></b><br>
+                          <button class="btn btn-primary" onclick="like(this)"><i class="far fa-thumbs-up"></i> 点赞 <span class="badge bg-secondary" id="likeCount">0</span></button>
+                      </div>
                   </div>
-                </div>
-            </div>
-            <br><hr class="inner"><br>
-            <div class="row justify-content-center" id="daguangsai">
-                <div class="col-md-12 mb-4">
-                    <div class="card video-card">
-                        <br><h5 class="card-title">景田x学院奖/《你，是不是渴了？》</h5><br>
-                        <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="zp\video\你，是不是渴了.MP4" style="height: 540px;width: 960px;" allowfullscreen></iframe>
-                        </div>
-                        <div class="card-body">
-                        <b><p class="card-text"></p></b><br>
-                        <button class="btn btn-primary" onclick="like(this)"><i class="far fa-thumbs-up"></i> 点赞 <span class="badge bg-secondary" id="likeCount">0</span></button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </div>
-        </div>
-    </div>
+              </div>
+          </div>
+          <br><hr class="inner"><br>
+          <div class="row justify-content-center" id="daguangsai">
+              <div class="col-md-12 mb-4">
+                  <div class="card video-card">
+                      <br><h5 class="card-title">景田x学院奖/《你，是不是渴了？》</h5><br>
+                      <div class="embed-responsive embed-responsive-16by9" style="max-width: 100%;">
+                          <iframe class="embed-responsive-item" src="zp\video\你，是不是渴了.MP4" allowfullscreen></iframe>
+                      </div>
+                      <div class="card-body">
+                          <b><p class="card-text"></p></b><br>
+                          <button class="btn btn-primary" onclick="like(this)"><i class="far fa-thumbs-up"></i> 点赞 <span class="badge bg-secondary" id="likeCount">0</span></button>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  
 
     <br><hr class="outer"><br>
 
