--- a/portfo/zpj.html
+++ b/portfo/zpj.html
@@ -387,7 +387,7 @@
     <div class="section4" id="section4">
         <div class="container">
             <h2><b>其他作品展示</b></h2>
-            <p>待完善...</p>
+            <p>未完待续...</p>
         </div>
     </div>
 
